# gamemAIster-backend

./: .gitignore  README.md  init_db.py  main.py  mypy.ini  pyproject.toml  run.py
dev/: llm_client_claude.py  llm_client_gemini.py  mission_prompts.txt  test_textgen_webui.py
dev/llm_interaction/: llm_interaction.py
dev/oracle_webscraping/corporation/: corporation.py
dev/oracle_webscraping/weapons/: weapons.py
dev/regex_parsing/: regex_parsing.py
dev/sqlite_database/: fulltext_search.py
dev/summary/: test_summary_local_llm.py
dev/vectordatabase/: .gitignore  dev_chromadb.py  dev_chromadb_hybrid.py  dev_chromadb_reranking.py  dev_docment_retrieval.py  dev_fulltextsearch.py  dev_hybrid_search.py  dev_reranking.py
src/: extensions.py  main.py
src/brain/: chat.py  data_types.py  gamemaster.py  json_tools.py  oracle.py  prompts.py  templates.py  types.py
src/brain/oracle/: call_of_cthulhu.json  expanse.json  expanse_non_hero.json  seventh_sea.json  shadowrun.json  vampire_the_masquerade.json
src/brain/prompt_templates/: cthulhu_mission_prompt.txt  cthulhu_system_prompt.txt  gamemaster_mission_prompt copy.txt  gamemaster_mission_prompt.txt  gamemaster_system_prompt copy.txt  gamemaster_system_prompt.txt  shadowrun_mission_prompt.txt  shadowrun_system_prompt.txt  summary_provider.txt  text_entity_prompt.txt  text_scene_prompt_examples.txt  text_summary_prompt.txt  vampire_mission_prompt.txt  vampire_system_prompt.txt
src/brain/prompt_templates/cthulhu/: cthulhu_background_mission_aligner.txt  cthulhu_mission_prompt.txt  cthulhu_system_prompt.txt
src/brain/prompt_templates/expanse/: expanse_background_mission_aligner.txt  expanse_background_mission_aligner_non_hero.txt  expanse_mission_prompt.txt  expanse_mission_prompt_non_hero.txt  expanse_system_prompt.txt  expanse_system_prompt_non_hero.txt
src/brain/prompt_templates/seventh_sea/: seventh_sea_background_mission_aligner.txt  seventh_sea_mission_prompt.txt  seventh_sea_system_prompt.txt
src/brain/prompt_templates/shadowrun/: shadowrun_background_mission_aligner.txt  shadowrun_mission_prompt.txt
src/brain/prompt_templates/vampire/: vampire_background_mission_aligner.txt  vampire_mission_prompt.txt  vampire_system_prompt.txt
src/crud/: crud.py  sqlmodel.py
src/llmclient/: llm_client.py  llm_parameters.py  types.py
src/routers/: interaction.py  mission.py  session.py  text_gen_webui.py  textgen_webui.py  tts.py
src/routers/schema/: interaction.py  mission.py  session.py
src/utils/: logger.py  sqllogger.py
tests/: test_crud.py
