[project]
name = "shadow-teller-backend"
version = "1.0.0"
dependencies = [
    "fastapi",
    "requests",
    "sseclient-py",
    "uvicorn",
    "python-json-logger",
    "sqlalchemy",
    "regex",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "pylint",
    "types-requests",
    "beautifulsoup4",
]

