[project]
name = "shadow-teller-backend"
version = "1.0.0"
dependencies = [
    "fastapi",
    "requests",
    "sseclient-py",
    "uvicorn",
    "python-json-logger",
    "sqlalchemy",
    "regex",
    "chromadb"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "pylint",
    "types-requests",
    "beautifulsoup4",
    "sentence_transformers", # needed for custom embedding model
    "einops", # needed for custom embedding model
    "ragatouille",
    "rank_bm25",
]

